doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_77\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko
-d
C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\listBarang.java
<---- end of javadoc command ---->
Loading source file C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\listBarang.java...
Constructing Javadoc information...
C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\listBarang.java:16: error: cannot find symbol
    public static ArrayList<Product> barang = new ArrayList<Product>();
                  ^
  symbol:   class ArrayList
  location: class listBarang
Standard Doclet version 1.8.0_77
Building tree for all the packages and classes...
Generating C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc\listBarang.html...
Generating C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc\package-frame.html...
Generating C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc\package-summary.html...
Generating C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc\allclasses-frame.html...
Generating C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc\allclasses-noframe.html...
Generating C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc\index.html...
Generating C:\Users\Andira\Dropbox\Sistem pengelolaan Inventory Toko\doc\stylesheet.css...
1 warning
